--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вход</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Войти</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='../static/styles.css') }}">
 </head>
 <body>
-    <h1>Вход</h1>
+    <h1>Войти на сайт</h1>
     <form method="POST">
-        <label>Логин: <input type="text" name="login" required></label><br>
-        <label>Пароль: <input type="password" name="password" required></label><br>
+        <div>
+            <label for="login">Логин:</label>
+            <input type="text" name="login" id="login" required>
+        </div>
+        <div>
+            <label for="password">Пароль:</label>
+            <input type="password" name="password" id="password" required>
+        </div>
         <button type="submit">Войти</button>
     </form>
-    <a href="{{ url_for('register') }}">Нет аккаунта? Зарегистрироваться</a>
+
+    {% if error %}
+        <p style="color: red;">{{ error }}</p>
+    {% endif %}
 </body>
 </html>
