--- a/templates/edit_ad.html
+++ b/templates/edit_ad.html
@@ -4,29 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Редактировать объявление</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='../static/styles.css') }}"></head>
+</head>
 <body>
     <h1>Редактировать объявление</h1>
     <form method="POST">
-        <label for="title">Заголовок:</label>
-        <input type="text" name="title" value="{{ ad.title }}" required><br><br>
-
-        <label for="content">Контент:</label>
-        <textarea name="content" required>{{ ad.content }}</textarea><br><br>
-
-        <button type="submit">Сохранить</button>
-    </form>
-    <br>
-    <a href="{{ url_for('main') }}">На главную</a>
-    <form method="POST">
-        <label for="title">Заголовок:</label>
+        <label for="title">Заголовок</label><br>
         <input type="text" id="title" name="title" value="{{ ad.title }}" required><br><br>
-    
-        <label for="content">Контент:</label>
+
+        <label for="content">Содержание</label><br>
         <textarea id="content" name="content" required>{{ ad.content }}</textarea><br><br>
-    
+
         <button type="submit">Сохранить изменения</button>
     </form>
-    
 </body>
 </html>
