--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
                 <a href="{{ url_for('profile') }}">Профиль</a>
                 <a href="{{ url_for('logout') }}">Выход</a>
             {% endif %}
+            {% if session.get('is_admin') %}
+                <a href="{{ url_for('users') }}">Пользователи</a>
+            {% endif %}
         </nav>
 
         <h2>Объявления</h2>
