--- a/static/styles.css
+++ b/static/styles.css
@@ -16,7 +16,7 @@ header {
     background-color: #333;
     color: white;
     padding: 10px 0;
-    text-align: center;
+    text-align: left;
 }
 
 header h1 {
