--- a/templates/ads.html
+++ b/templates/ads.html
@@ -28,5 +28,8 @@
             <a href="{{ url_for('create_ad') }}" class="btn btn-primary">Создать объявление</a>
         </div>
     </div>
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
