--- a/templates/edit_ad.html
+++ b/templates/edit_ad.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Редактировать объявление</title>
     <style>
-        /* Общие стили */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -103,5 +102,8 @@
         </form>
         <a href="{{ url_for('main') }}" class="back-link">Вернуться на главную</a>
     </div>
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
