--- a/templates/index.html
+++ b/templates/index.html
@@ -43,5 +43,8 @@
         </div>
     {% endfor %}
     </div>
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
