--- a/templates/login.html
+++ b/templates/login.html
@@ -23,5 +23,8 @@
     {% if error %}
         <p style="color: red;">{{ error }}</p>
     {% endif %}
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
