--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <p style="text-align: center; color: #ffffff; background-color: #333; padding: 10px 0; margin-top: 20px;">&copy; 2024 Knowledge Base</p>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
     </footer>
 </body>
 </html>
