--- a/templates/create_ad.html
+++ b/templates/create_ad.html
@@ -18,5 +18,8 @@
     </form>
     <br>
     <a href="{{ url_for('main') }}">На главную</a>
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
