--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Редактировать профиль</title>
     <style>
-        /* Общие стили */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f7fc;
@@ -130,5 +129,8 @@ header h1 {
             <a href="{{ url_for('profile') }}">Назад</a>
         </div>
     </div>
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
