--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мой профиль</title>
     <style>
-        /* Общие стили для сайта */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -47,7 +46,6 @@
             color: #007bff;
         }
 
-        /* Стили для профиля */
         .profile-card {
             background-color: white;
             padding: 20px;
@@ -61,7 +59,7 @@
 
         .profile-card img {
             border-radius: 50%;
-            width: 150px; /* Увеличен размер аватарки */
+            width: 150px;
             height: 150px;
             object-fit: cover;
         }
@@ -92,7 +90,6 @@
             color: #0056b3;
         }
 
-        /* Стили для объявлений */
         .ads-card {
             background-color: white;
             padding: 20px;
@@ -139,7 +136,6 @@
             background-color: #0056b3;
         }
 
-        /* Адаптивность */
         @media (max-width: 768px) {
             .container {
                 width: 95%;
@@ -164,7 +160,6 @@
                 height: 120px;
             }
         }
-        /* Стили для списка объявлений */
 .ads-list {
     margin-top: 20px;
 }
@@ -289,5 +284,8 @@
         </div>
         <a href="{{ url_for('create_ad') }}" class="btn-create">Создать новое объявление</a>
     </div>
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
