--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,6 @@
     <h1>Регистрация</h1>
     <form method="POST" enctype="multipart/form-data">
         <form method="POST" enctype="multipart/form-data">
-            <h2>Регистрация</h2>
             <input type="text" name="login" placeholder="Логин" required>
             <input type="password" name="password" placeholder="Пароль" required>
             <input type="text" name="fullname" placeholder="Полное имя" required>
@@ -19,32 +18,9 @@
             <input type="file" name="avatar" accept="image/*">
             <button type="submit">Зарегистрироваться</button>
         </form>
-        
-        <!-- <div>
-            <label for="login">Логин:</label>
-            <input type="text" name="login" id="login" required>
-        </div>
-        <div>
-            <label for="password">Пароль:</label>
-            <input type="password" name="password" id="password" required>
-        </div>
-        <div>
-            <label for="fullname">Полное имя:</label>
-            <input type="text" name="fullname" id="fullname" required>
-        </div>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" required>
-        </div>
-        <div>
-            <label for="about">О себе:</label>
-            <textarea name="about" id="about"></textarea>
-        </div>
-        <div>
-            <label for="avatar">Аватар:</label>
-            <input type="file" name="avatar" id="avatar" required>
-        </div>
-        <button type="submit">Зарегистрироваться</button> -->
     </form>
+    <footer>
+        <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+    </footer>
 </body>
 </html>
