--- a/templates/user.html
+++ b/templates/user.html
@@ -31,6 +31,8 @@
         </form>
     </div>
 {% endfor %}
-
+<footer>
+    <p>&copy;Бархатова Ольга, ФБИ-24. 2024</p>
+</footer>
 </body>
 </html>
