--- a/templates/users.html
+++ b/templates/users.html
@@ -2,11 +2,10 @@
 
 {% block content %}
 <style>
-    /* Общие стили */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #121212; /* Темный фон */
-    color: #ffffff; /* Белый текст */
+    background-color: #121212;
+    color: #ffffff;
     margin: 0;
     padding: 0;
 }
@@ -15,47 +14,44 @@ body {
     max-width: 900px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #1e1e1e; /* Темный серый фон контейнера */
+    background-color: #1e1e1e;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
 }
 
-/* Заголовок */
 header h1 {
     text-align: center;
-    color: #ffffff; /* Белый текст */
+    color: #ffffff;
     font-size: 2rem;
     margin-bottom: 20px;
 }
 
-/* Таблица */
 .user-table {
     width: 100%;
     border-collapse: collapse;
     margin: 20px 0;
     font-size: 1rem;
     text-align: left;
-    color: #ffffff; /* Белый текст */
+    color: #ffffff;
 }
 
 .user-table th, .user-table td {
     padding: 12px 15px;
-    border: 1px solid #444; /* Темный бордюр */
+    border: 1px solid #444;
 }
 
 .user-table thead {
-    background-color: #333; /* Темно-серый фон для заголовков */
+    background-color: #333;
 }
 
 .user-table tbody tr:nth-child(even) {
-    background-color: #2c2c2c; /* Серый фон для четных строк */
+    background-color: #2c2c2c;
 }
 
 .user-table tbody tr:hover {
-    background-color: #444; /* Подсветка строки при наведении */
+    background-color: #444;
 }
 
-/* Кнопки */
 .btn {
     display: inline-block;
     padding: 8px 12px;
@@ -85,7 +81,6 @@ header h1 {
     background-color: #d32f2f;
 }
 
-/* Форма удаления */
 .inline-form {
     display: inline;
 }
